[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.8",
    "fastapi>=0.136.3",
    "langchain-openai>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.7",
    "pymysql>=1.1",
    "psycopg2-binary>=2.9",
    "httpx>=0.28",
    "uuid6>=1.5.0",
    "email-validator>=2.0.0",
]
